<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <LinearLayout
        android:id="@+id/lifeStoryLinesSettingsRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayShade"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lifeStoryLinesSettingsRowTopLabel"
                android:textSize="21dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lifeStoryLinesSettingsRowBottomLabel"
                android:textSize="16dp"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/lifeStoryLinesColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/lineColorOptions"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Switch
            android:id="@+id/showLifeStoryLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:id="@+id/treeLinesSettingsRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayShade"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treeLinesSettingsRowTopLabel"
                android:textSize="21dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treeLinesSettingsRowBottomLabel"
                android:textSize="16dp"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/treeLinesColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/lineColorOptions"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"/>

        <Switch
            android:id="@+id/showTreeLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:id="@+id/spouseLinesSettingsRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayShade"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spouseLinesSettingsRowTopLabel"
                android:textSize="21dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spouseLinesSettingsRowBottomLabel"
                android:textSize="16dp"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/spouseLineColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/lineColorOptions"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="43dp"
            android:layout_marginRight="20dp"/>

        <Switch
            android:id="@+id/showSpouseLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:checked="true"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:id="@+id/mapSettingsRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayShade"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapSettingsRowTopLabel"
                android:textSize="21dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapSettingsRowBottomLabel"
                android:textSize="16dp"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/mapTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/mapTypeOptions"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:id="@+id/resyncDataRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayShade"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resyncDataRowTopLabel"
                android:textSize="21dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resyncDataRowBottomLabel"
                android:textSize="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:id="@+id/logoutRowLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayShade"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logoutRowTopLabel"
                android:textSize="21dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logoutRowBottomLabel"
                android:textSize="16dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>